B&L QA/objects/Pricing_Agreement__c.object
<CustomObject>
    <description>EMEA SU</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account to which this price set / pricing agreement is related. EMEA SU.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pricing Agreements</relationshipLabel>
        <relationshipName>Pricing_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address__c</fullName>
        <description>EMEA SU</description>
        <formula>Account__r.BillingStreet &amp; BR() &amp; Account__r.BillingCity &amp; BR() &amp; Account__r.BillingState &amp; BR() &amp; Account__r.BillingPostalCode &amp; BR() &amp; Account__r.BillingCountry</formula>
        <label>Bill To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract to which this price set / pricing agreement is related. EMEA SU.</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Pricing Agreements</relationshipLabel>
        <relationshipName>Pricing_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <description>EMEA SU</description>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BMI - UKPRCGMB</fullName>
                </value>
                <value>
                    <fullName>Spire - UKSU001</fullName>
                </value>
                <value>
                    <fullName>Ramsay - UKPRCGRH</fullName>
                </value>
                <value>
                    <fullName>Nuffield - UKPRCGMC</fullName>
                </value>
                <value>
                    <fullName>Care UK - UKSU002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>EMEA SU</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Search_Information__c</fullName>
        <description>Contains info like ship to id so that price agreements are returned in global searches</description>
        <label>Search Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>EMEA SU</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Pricing Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Bill_To_Address__c</columns>
        <columns>Contract__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>EMEASUContractManagers</group>
            <group>EMEASU_Tender_Office_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Price Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Agreements</pluralLabel>
    <recordTypes>
        <fullName>EMEASU_Price_Agreement</fullName>
        <active>true</active>
        <description>EMEASU RT</description>
        <label>EMEASU Price Agreement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>